# adb-knowledge-assistant

./: .env.example  README.md  pyproject.toml  ruff.toml
data/raw/android_docs/: android_docs.json
data/raw/command_db/: adb_commands.json
data/raw/personal_docs/: personal_docs.json
data/raw/troubleshooting/: troubleshooting_kb.json
scripts/: setup_system.py
src/: main.py
src/agents/: __init__.py  code_generator_agent.py  command_expert_agent.py  graph.py  router_agent.py  synthesizer_agent.py  troubleshooting_agent.py
src/data/: chunking.py  ingestion.py
src/retrieval/: embeddings.py  hybrid_retriever.py  vector_store.py
src/utils/: __init__.py  config.py  llm_factory.py  logger.py
